# video_via_text_classification

./: .travis.yml  README.md  multigpu.sh  pyproject.toml
configs/: cluster-config copy.yaml  cluster-config.yaml
shell_scripts/: download_ufc50.sh  prepare_video_paths.sh  run_blip2.sh
src/: process_audio.py
src/LLMs/: test_llama2.py  test_openai_chatgpt.py
src/ViT_models/: deploy_blip2.py  process_BLIP2.py
src/utils/: video_utils.py
