[tool.poetry]
name = "video-via-text-classification"
version = "0.1.0"
description = "My personal implementation and extension of the following project https://arxiv.org/pdf/2309.10783.pdf Language as the Medium: Multimodal Video Classification through text only, 2023"
authors = ["K D <piernikowyludek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
numpy = "^1.26.2"
pandas = "^2.1.4"
Pillow = "^10.1.0"
jupyter = "*"
ipykernel = "*"
torch = "*"
torchvision = "*"
transformers = "^4.35.2"
bitsandbytes = "^0.41.3"
accelerate = "^0.25.0"
opencv-python = "^4.8.1.78"
faster-whisper = "^0.10.0"
openai = "^1.3.8"
pytest = "^7.4.3"
sagemaker = "^2.199.0"
boto3 = "^1.33.11"
jinja2 = "^3.1.2"
huggingface-hub = "^0.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
